syntax = "proto3";

package user;

message UserRequest {
    uint64 id = 1;
}

message UserResponse {
    uint64 id = 1;
    string name = 2;
    string email = 3;
}

service UserService {
    rpc GetUser (UserRequest) returns (UserResponse);
}